# webhook_receiver

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  events.py  main.py  receiver.py  redis_client.py  schemas.py  stats.py  verifiers.py
app/static/: index.html  login.html
scripts/: dump-deadletter.sh  dump-payloads.sh
tests/: conftest.py  test_dashboard.py  test_receiver.py  test_stats.py  test_worker.py
worker/: handlers.py  worker.py
